# bldr-saucer

./: .gitignore  CMakeLists.txt  README.md  deps.go  embed.go  go.mod  go.sum  index.js  integration_test.go  package.json  saucer.pb.cc  saucer.pb.go  saucer.pb.h  saucer.pb.rs  saucer.pb.ts  saucer.proto
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
cmake/: CPM.cmake
npm/bldr-saucer/: install.js  package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
src/: fetch_proto.cpp  fetch_proto.h  main.cpp  pipe_client.cpp  pipe_client.h  pipe_connection.h  scheme_forwarder.cpp  scheme_forwarder.h
